Link up scripts

--- a/frenemy.html
+++ b/frenemy.html
@@ -6,7 +6,7 @@
   <body>
     <button id="add-frenemy">Add Frenemy</button>
     <ul id="frenemy-list"></ul>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery//jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
     <script>
@@ -50,5 +50,6 @@
 
         var appview = new AppView;
       })(jQuery);
+    </script>
   </body>
 </html>
